# file-transfer__ipc

./: .clang-format  CMakeLists.txt
app/: Makefile
app/receiver/: CMakeLists.txt  receiver.cpp
app/sender/: CMakeLists.txt
lib/: CMakeLists.txt
lib/arg_handler/: CMakeLists.txt  arg_handler.cpp  arg_handler.hpp
lib/common/: CMakeLists.txt  ipc_config.hpp  ipc_mode.hpp  ipc_protocol.hpp
